# domain-control-plane

./: .gitignore  Cargo.toml  README.md  go.work
docs/: README.md  dcp-conventions.md
docs/00-vision/: dcp-vision-revolutionary-experiences.md  dcp-vision-revolutionary-positioning.md
docs/01-vision/: dcp-01-product-thesis.md  dcp-02-category-definition.md  dcp-03-design-principles.md  dcp-04-honest-constraints.md  dcp-05-competitive-positioning.md
docs/02-architecture/: dcp-01-system-overview.md  dcp-02-layers-and-boundaries.md  dcp-03-compilation-pipeline.md  dcp-04-deployment-modes.md  dcp-05-multi-tenant-saas-model.md  dcp-06-event-and-webhook-model.md  dcp-07-extreme-speed-optimizations.md  dcp-08-technology-stack.md  dcp-09-performance-observability-and-benchmarking.md  dcp-13-advanced-speed-techniques.md
docs/03-core-systems/: dcp-01-transactional-domain-kernel.md  dcp-02-domain-intent-compiler.md  dcp-03-route-runtime.md  dcp-04-domain-oauth-capability-tokens.md  dcp-05-signed-provider-recipe-runtime.md  dcp-06-ownership-provenance-graph.md  dcp-07-certificate-firewall.md  dcp-08-subdomain-takeover-immune-system.md  dcp-09-tests-replay-simulation-rollback.md  dcp-10-ai-planner-debugger.md  dcp-11-programmable-edge.md  dcp-12-domain-state-primitives.md
docs/04-apis/: dcp-01-api-overview.md  dcp-02-transaction-api.md  dcp-03-intent-api.md  dcp-04-policy-api.md  dcp-05-observability-api.md  dcp-06-auth-api.md  dcp-07-openapi-reference.md
docs/05-schemas/: dcp-01-schema-overview.md  dcp-02-intent-schema.md  (+5 more)
proto/: buf.gen.yaml  buf.yaml
(+18 files in other folders)
